@@ -7,6 +7,9 @@
 * Added code for graph.Line
 * Added code for graph.Area.
 * Finised graph.Graph.
+* Added graph.ColorAttributes class for easy OOP-configuration of a graph's
+overall color attributes.
+* As a first example, added the graph-generating code from the doctests.
 
 2006.01.23
 
